ext/ogg/gstoggstream.c
@@ -40,6 +40,8 @@ typedef struct _GstOggMap GstOggMap;
 
 typedef gboolean (*GstOggMapSetupFunc) (GstOggStream * pad,
     ogg_packet * packet);
+typedef gboolean (*GstOggMapSetupFromCapsFunc) (GstOggStream * pad,
+    const GstCaps * caps);
 typedef GstClockTime (*GstOggMapToTimeFunc) (GstOggStream * pad,
     gint64 granulepos);
 typedef gint64 (*GstOggMapToGranuleFunc) (GstOggStream * pad,
@@ -66,6 +68,8 @@ typedef void (*GstOggMapExtractTagsFunc) (GstOggStream * pad,
 typedef gint64 (*GstOggMapGranuleposToKeyGranuleFunc) (GstOggStream * pad,
     gint64 granulepos);
 
+typedef GstBuffer *(*GstOggMapGetHeadersFunc) (GstOggStream * pad);
+
 #define SKELETON_FISBONE_MIN_SIZE  52
 #define SKELETON_FISHEAD_3_3_MIN_SIZE 112
 #define SKELETON_FISHEAD_4_0_MIN_SIZE 80
@@ -77,6 +81,7 @@ struct _GstOggMap
   int min_packet_size;
   const gchar *media_type;
   GstOggMapSetupFunc setup_func;
+  GstOggMapSetupFromCapsFunc setup_from_caps_func;
   GstOggMapToGranuleFunc granulepos_to_granule_func;
   GstOggMapToGranuleposFunc granule_to_granulepos_func;
   GstOggMapIsGranuleposKeyFrameFunc is_granulepos_key_frame_func;
@@ -85,6 +90,7 @@ struct _GstOggMap
   GstOggMapPacketDurationFunc packet_duration_func;
   GstOggMapGranuleposToKeyGranuleFunc granulepos_to_key_granule_func;
   GstOggMapExtractTagsFunc extract_tags_func;
+  GstOggMapGetHeadersFunc get_headers_func;
 };
 
 extern const GstOggMap mappers[];
@@ -263,6 +269,15 @@ gst_ogg_stream_get_media_type (GstOggStream * pad)
   if (!structure)
     return NULL;
   return gst_structure_get_name (structure);
+}
+
+GstBuffer *
+gst_ogg_stream_get_headers (GstOggStream * pad)
+{
+  if (!mappers[pad->map].get_headers_func)
+    return NULL;
+
+  return mappers[pad->map].get_headers_func (pad);
 }
 
 /* some generic functions */
@@ -651,6 +666,50 @@ setup_vp8_mapper (GstOggStream * pad, ogg_packet * packet)
 }
 
 static gboolean
+vp8_fill_header (GstOggStream * pad, const GstCaps * caps, guint8 * data)
+{
+  gint width, height, par_n, par_d, fps_n, fps_d;
+  GstStructure *structure = gst_caps_get_structure (caps, 0);
+
+  if (!(gst_structure_get_int (structure, "width", &width) &&
+          gst_structure_get_int (structure, "height", &height) &&
+          gst_structure_get_fraction (structure, "framerate", &fps_n,
+              &fps_d))) {
+    GST_DEBUG ("Failed to get width, height or framerate from caps %"
+        GST_PTR_FORMAT, caps);
+    return FALSE;
+  }
+  if (!gst_structure_get_fraction (structure, "pixel-aspect-ratio", &par_n,
+          &par_d)) {
+    par_n = par_d = 1;
+  }
+
+  memcpy (data, "OVP80\1\1", 8);
+  GST_WRITE_UINT16_BE (data + 8, width);
+  GST_WRITE_UINT16_BE (data + 10, height);
+  GST_WRITE_UINT24_BE (data + 12, par_n);
+  GST_WRITE_UINT24_BE (data + 15, par_d);
+  GST_WRITE_UINT32_BE (data + 18, fps_n);
+  GST_WRITE_UINT32_BE (data + 22, fps_d);
+
+  return TRUE;
+}
+
+static gboolean
+setup_vp8_mapper_from_caps (GstOggStream * pad, const GstCaps * caps)
+{
+  guint8 data[26];
+  ogg_packet packet;
+
+  if (!vp8_fill_header (pad, caps, data))
+    return FALSE;
+
+  packet.packet = data;
+  packet.bytes = 26;
+  return setup_vp8_mapper (pad, &packet);
+}
+
+static gboolean
 is_keyframe_vp8 (GstOggStream * pad, gint64 granulepos)
 {
   guint64 gpos = granulepos;
@@ -740,6 +799,18 @@ extract_tags_vp8 (GstOggStream * pad, ogg_packet * packet)
     gst_tag_list_add (pad->taglist, GST_TAG_MERGE_REPLACE,
         GST_TAG_VIDEO_CODEC, "VP8", NULL);
   }
+}
+
+static GstBuffer *
+get_headers_vp8 (GstOggStream * pad)
+{
+  guint8 *data = g_malloc (26);
+
+  if (vp8_fill_header (pad, pad->caps, data)) {
+    return gst_buffer_new_wrapped (data, 26);
+  }
+  g_free (data);
+  return NULL;
 }
 
 /* vorbis */
@@ -2141,6 +2212,7 @@ const GstOggMap mappers[] = {
     "\200theora", 7, 42,
     "video/x-theora",
     setup_theora_mapper,
+    NULL,
     granulepos_to_granule_theora,
     granule_to_granulepos_default,
     is_granulepos_keyframe_theora,
@@ -2148,12 +2220,14 @@ const GstOggMap mappers[] = {
     is_header_theora,
     packet_duration_constant,
     NULL,
-    extract_tags_theora
+    extract_tags_theora,
+    NULL
   },
   {
     "\001vorbis", 7, 22,
     "audio/x-vorbis",
     setup_vorbis_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
@@ -2161,12 +2235,14 @@ const GstOggMap mappers[] = {
     is_header_vorbis,
     packet_duration_vorbis,
     NULL,
-    extract_tags_vorbis
+    extract_tags_vorbis,
+    NULL
   },
   {
     "Speex", 5, 80,
     "audio/x-speex",
     setup_speex_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
@@ -2174,7 +2250,8 @@ const GstOggMap mappers[] = {
     is_header_count,
     packet_duration_constant,
     NULL,
-    extract_tags_count
+    extract_tags_count,
+    NULL
   },
   {
     "PCM     ", 8, 0,
@@ -2184,7 +2261,9 @@ const GstOggMap mappers[] = {
     NULL,
     NULL,
     NULL,
+    NULL,
     is_header_count,
+    NULL,
     NULL,
     NULL,
     NULL
@@ -2197,7 +2276,9 @@ const GstOggMap mappers[] = {
     NULL,
     NULL,
     NULL,
+    NULL,
     is_header_count,
+    NULL,
     NULL,
     NULL,
     NULL
@@ -2206,11 +2287,13 @@ const GstOggMap mappers[] = {
     "Annodex", 7, 0,
     "application/x-annodex",
     setup_fishead_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     NULL,
     NULL,
     is_header_count,
+    NULL,
     NULL,
     NULL,
     NULL
@@ -2223,7 +2306,9 @@ const GstOggMap mappers[] = {
     NULL,
     NULL,
     NULL,
+    NULL,
     is_header_true,
+    NULL,
     NULL,
     NULL,
     NULL
@@ -2232,6 +2317,7 @@ const GstOggMap mappers[] = {
     "fLaC", 4, 0,
     "audio/x-flac",
     setup_fLaC_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
@@ -2239,12 +2325,14 @@ const GstOggMap mappers[] = {
     is_header_fLaC,
     packet_duration_flac,
     NULL,
+    NULL,
     NULL
   },
   {
     "\177FLAC", 5, 36,
     "audio/x-flac",
     setup_flac_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
@@ -2252,11 +2340,14 @@ const GstOggMap mappers[] = {
     is_header_flac,
     packet_duration_flac,
     NULL,
-    extract_tags_flac
+    extract_tags_flac,
+    NULL
   },
   {
     "AnxData", 7, 0,
     "application/octet-stream",
+    NULL,
+    NULL,
     NULL,
     NULL,
     NULL,
@@ -2270,6 +2361,7 @@ const GstOggMap mappers[] = {
     "CELT    ", 8, 0,
     "audio/x-celt",
     setup_celt_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     NULL,
@@ -2277,12 +2369,14 @@ const GstOggMap mappers[] = {
     is_header_count,
     packet_duration_constant,
     NULL,
-    extract_tags_count
+    extract_tags_count,
+    NULL
   },
   {
     "\200kate\0\0\0", 8, 0,
     "text/x-kate",
     setup_kate_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     NULL,
@@ -2290,12 +2384,14 @@ const GstOggMap mappers[] = {
     is_header_count,
     packet_duration_kate,
     NULL,
-    extract_tags_kate
+    extract_tags_kate,
+    NULL
   },
   {
     "BBCD\0", 5, 13,
     "video/x-dirac",
     setup_dirac_mapper,
+    NULL,
     granulepos_to_granule_dirac,
     granule_to_granulepos_dirac,
     is_keyframe_dirac,
@@ -2303,12 +2399,14 @@ const GstOggMap mappers[] = {
     is_header_count,
     packet_duration_constant,
     granulepos_to_key_granule_dirac,
+    NULL,
     NULL
   },
   {
     "OVP80\1\1", 7, 4,
     "video/x-vp8",
     setup_vp8_mapper,
+    setup_vp8_mapper_from_caps,
     granulepos_to_granule_vp8,
     granule_to_granulepos_vp8,
     is_keyframe_vp8,
@@ -2316,12 +2414,14 @@ const GstOggMap mappers[] = {
     is_header_vp8,
     packet_duration_vp8,
     granulepos_to_key_granule_vp8,
-    extract_tags_vp8
+    extract_tags_vp8,
+    get_headers_vp8
   },
   {
     "OpusHead", 8, 0,
     "audio/x-opus",
     setup_opus_mapper,
+    NULL,
     granulepos_to_granule_opus,
     granule_to_granulepos_default,
     NULL,
@@ -2329,18 +2429,21 @@ const GstOggMap mappers[] = {
     is_header_opus,
     packet_duration_opus,
     NULL,
-    extract_tags_opus
+    extract_tags_opus,
+    NULL
   },
   {
     "\001audio\0\0\0", 9, 53,
     "application/x-ogm-audio",
     setup_ogmaudio_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
     is_packet_keyframe_true,
     is_header_ogm,
     packet_duration_ogm,
+    NULL,
     NULL,
     NULL
   },
@@ -2348,12 +2451,14 @@ const GstOggMap mappers[] = {
     "\001video\0\0\0", 9, 53,
     "application/x-ogm-video",
     setup_ogmvideo_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     NULL,
     NULL,
     is_header_ogm,
     packet_duration_constant,
+    NULL,
     NULL,
     NULL
   },
@@ -2361,6 +2466,7 @@ const GstOggMap mappers[] = {
     "\001text\0\0\0", 9, 9,
     "application/x-ogm-text",
     setup_ogmtext_mapper,
+    NULL,
     granulepos_to_granule_default,
     granule_to_granulepos_default,
     is_granulepos_keyframe_true,
@@ -2368,12 +2474,14 @@ const GstOggMap mappers[] = {
     is_header_ogm,
     packet_duration_ogm,
     NULL,
-    extract_tags_ogm
+    extract_tags_ogm,
+    NULL
   },
   {
     "\200daala", 6, 42,
     "video/x-daala",
     setup_daala_mapper,
+    NULL,
     granulepos_to_granule_daala,
     granule_to_granulepos_default,
     is_granulepos_keyframe_daala,
@@ -2381,7 +2489,8 @@ const GstOggMap mappers[] = {
     is_header_daala,
     packet_duration_constant,
     NULL,
-    extract_tags_daala
+    extract_tags_daala,
+    NULL
   },
  
 };
@@ -2412,6 +2521,42 @@ gst_ogg_stream_setup_map (GstOggStream * pad, ogg_packet * packet)
       } else {
         GST_WARNING ("mapper '%s' did not accept setup header",
             mappers[i].media_type);
+      }
+    }
+  }
+
+  return FALSE;
+}
+
+gboolean
+gst_ogg_stream_setup_map_from_caps (GstOggStream * pad, const GstCaps * caps)
+{
+  int i;
+  gboolean ret;
+  GstStructure *structure;
+
+  g_return_val_if_fail (caps != NULL, FALSE);
+
+  structure = gst_caps_get_structure (caps, 0);
+
+  for (i = 0; i < G_N_ELEMENTS (mappers); i++) {
+    if (mappers[i].setup_from_caps_func &&
+        gst_structure_has_name (structure, mappers[i].media_type)) {
+
+      GST_DEBUG ("found mapper for '%s'", mappers[i].id);
+
+      if (mappers[i].setup_from_caps_func)
+        ret = mappers[i].setup_from_caps_func (pad, caps);
+      else
+        continue;
+
+      if (ret) {
+        GST_DEBUG ("got stream type %" GST_PTR_FORMAT, pad->caps);
+        pad->map = i;
+        return TRUE;
+      } else {
+        GST_WARNING ("mapper '%s' did not accept caps %" GST_PTR_FORMAT,
+            mappers[i].media_type, caps);
       }
     }
   }
